# docs/public/api/openapi-3.0.yaml
@@ -1209,6 +1209,53 @@ paths:
             application/json:
               schema:
                 type: string
+  /v1/labelmaker/settings:
+    get:
+      security:
+        - Bearer: []
+      tags:
+        - Labelmaker
+      summary: Get Zebra printer settings
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/v1.ZebraPrinterSettings"
+    put:
+      security:
+        - Bearer: []
+      tags:
+        - Labelmaker
+      summary: Update Zebra printer settings
+      requestBody:
+        $ref: "#/components/requestBodies/v1.ZebraPrinterSettings"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/v1.ZebraPrinterSettings"
+  /v1/labelmaker/test:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - Labelmaker
+      summary: Print a Zebra test label
+      requestBody:
+        $ref: "#/components/requestBodies/v1.ZebraPrinterSettings"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: boolean
   /v1/maintenance:
     get:
       security:
@@ -2098,6 +2145,14 @@ paths:
 servers:
   - url: /api
 components:
+  requestBodies:
+    v1.ZebraPrinterSettings:
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/v1.ZebraPrinterSettings"
+      description: Printer settings
+      required: true
   securitySchemes:
     Bearer:
       description: "\"Type 'Bearer TOKEN' to correctly set the API Key\""
@@ -4534,6 +4589,23 @@ components:
       type: object
       properties:
         item: {}
+    v1.ZebraPrinterSettings:
+      type: object
+      properties:
+        darkness:
+          type: integer
+        labelSize:
+          type: string
+        orientation:
+          type: string
+        printFontSize:
+          type: integer
+        printSpeed:
+          type: integer
+        printerIp:
+          type: string
+        printerPort:
+          type: integer
     v1.externalAttachmentRequest:
       type: object
       properties:
